# WorldWave-Agent

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  deploy.sh  install.ps1  install.sh  pyproject.toml  requirements.txt  run.sh  server.py  start_test.sh  ww_cli.py
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
coding/: CODING_AGENT.md  __init__.py  aci.py  allure.py  autocompact.py  circuit.py  code_graph.py  code_rag.py  code_search.py  debug_integration.py  dense_vector.py  harness.py  index_facade.py  loop_bridge.py  lsp.py  microcompact.py  mode.py  model_route.py  orchestrator.py  perception.py  planning.py  policy.py  progressive.py  sandbox.py  shell.py  tool_retrieval.py  treesitter_engine.py
contacts/: __init__.py  discovery.py  handshake.py  identity.py  permissions.py  protocol.py  roster.py
core/: __init__.py  acp.py  agent_grpc.py  autonomous_scheduler.py  beam_remediation.py  cascade.py  chat_commands.py  checkpoint.py  circadian.py  codebase_index.py  commands.py  config.py  consent.py  context.py  credentials.py  dashboard.py  delegation.py  diff.py  enterprise.py  entity_state.py  evolution.py  global_workspace.py  guardrails.py  hooks.py  kanban.py  llm.py  logger.py  loop.py  mcp.py  memory_integration.py  memory_store.py  multimodal_coding.py  persistence.py  plugin_marketplace.py  plugins.py  predictor.py  prompts.py  public_reply.py  scheduler.py  self_model.py  (+12 more)
deploy/: ww.user.service
docs/: beam-eval.md  beam-memory-eval-notes.md  coding-engine.md  coding-north-star.md  memory-vnext.md  ww-service-install.md
gateway/: __init__.py  __main__.py  attention.py  bridge.py  goal.py  nats.py  outbound.py  pairing.py  queue.py  security.py  server.py  session.py  tenant.py
integrations/: __init__.py  github_pr_bot.py
p2p/: __init__.py  aggregation.py  blockchain.py  blockchain_node.py  bootstrap_server.py  bootstrap_tracker.py  chain.py  dht.py  federation.py  gossip.py  network.py  nostr.py  pow.py  privacy.py  relay_server.py  reputation.py
proto/: __init__.py
(+449 files in other folders)
