[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldwave"
version = "0.5.0"
description = "Next-generation autonomous AI agent framework — spiral cognitive engine"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Clean-Dust"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "agent", "framework", "llm", "cognitive"]

requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "requests>=2.28.0",
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.30.0"]
websockets = ["websockets>=12.0"]
contacts = ["cryptography>=41.0.0"]
nats = ["nats-py>=0.8.0"]
stt = ["openai-whisper>=20231117"]
dev = []
test = ["pytest>=7.0.0", "cryptography>=41.0.0"]
all = [
    "playwright>=1.30.0",
    "websockets>=12.0",
    "cryptography>=41.0.0",
    "nats-py>=0.8.0",
    "openai-whisper>=20231117",
]

[project.urls]
Homepage = "https://github.com/Clean-Dust/worldwave"
Repository = "https://github.com/Clean-Dust/worldwave.git"
Documentation = "https://github.com/Clean-Dust/worldwave"

[project.scripts]
ww = "ww_cli:main"
gateway-server = "gateway.__main__:main"

[tool.setuptools]
py-modules = ["ww_cli"]

[tool.setuptools.packages.find]
include = ["core*", "contacts*", "gateway*", "proto*", "memory*", "pm*", "sandbox*", "tools*"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json", "*.yaml", "*.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
